--- a/src/app/landing-page/colleagues-say/colleagues-say.component.html
+++ b/src/app/landing-page/colleagues-say/colleagues-say.component.html
@@ -1,7 +1,7 @@
 <section >
   <div class="max-wrapper">
     <div>
-      <h2>What my colleagues say about me</h2>
+      <h2>{{ 'COLLEAGUES.SAY' | translate }}</h2>
 
       <swiper-container #swiper
         slides-per-view="auto"
@@ -16,36 +16,36 @@
 
         <swiper-slide>
           <div class="testimonial-card">
-            <blockquote>Working with him was a great experience. He is highly knowledgeable, quick to learn, and a true team player. I would gladly collaborate with him again.</blockquote>
-            <footer>L. Hamacher - Full Stack Developer</footer>
+            <blockquote>{{ 'COLLEAGUES.COL_1_TEXT' | translate }}</blockquote>
+            <footer>{{ 'COLLEAGUES.COL_1' | translate }}</footer>
           </div>
         </swiper-slide>
 
         <swiper-slide>
           <div class="testimonial-card">
-            <blockquote>He was a year younger in the program, and I had the opportunity to teach him various skills. He was eager to learn, quickly absorbed new knowledge, and approached every task with curiosity and enthusiasm.</blockquote>
-            <footer>Philip - IT Specialist in Application Development</footer>
+            <blockquote>{{ 'COLLEAGUES.COL_2_TEXT' | translate }}</blockquote>
+            <footer>{{ 'COLLEAGUES.COL_2' | translate }}</footer>
           </div>
         </swiper-slide>
 
         <swiper-slide>
           <div class="testimonial-card">
-            <blockquote>I identified him as a promising candidate for our Apprenticeship. During our time together, he showed great enthusiasm and dedication, eagerly learning SEO from me and quickly applying his new skills. His curiosity and motivation made him truly stand out.</blockquote>
-            <footer>F. Yilmaz - Senior SEO Manager</footer>
+            <blockquote>{{ 'COLLEAGUES.COL_3_TEXT' | translate }}</blockquote>
+            <footer>{{ 'COLLEAGUES.COL_3' | translate }}</footer>
           </div>
         </swiper-slide>
 
         <swiper-slide>
           <div class="testimonial-card">
-            <blockquote>I first met him during his internship at my workplace and immediately recognized his potential in software development. I supported him in finding a suitable apprenticeship position, and he consistently demonstrated motivation, curiosity, and a strong willingness to learn.</blockquote>
-            <footer>A. Petrović - Software Developer</footer>
+            <blockquote>{{ 'COLLEAGUES.COL_4_TEXT' | translate }}</blockquote>
+            <footer>{{ 'COLLEAGUES.COL_4' | translate }}</footer>
           </div>
         </swiper-slide>
 
         <swiper-slide>
           <div class="testimonial-card">
-            <blockquote>I had the pleasure of mentoring him in frontend development during his apprenticeship. While work responsibilities eventually limited my teaching time, I was consistently impressed by his dedication, curiosity, and ability to learn quickly. I would have loved to continue guiding him, as he showed great potential and enthusiasm.</blockquote>
-            <footer>Markus - Frontend Developer Mentor</footer>
+            <blockquote>{{ 'COLLEAGUES.COL_5_TEXT' | translate }}</blockquote>
+            <footer>{{ 'COLLEAGUES.COL_5' | translate }}</footer>
           </div>
         </swiper-slide>
 
