--- a/src/app/landing-page/about-me/about-me.component.html
+++ b/src/app/landing-page/about-me/about-me.component.html
@@ -11,19 +11,17 @@
 
         <article>
           <div>
-            <h2>Who I Am</h2>
+            <h2>{{ 'ABOUT.WHO' | translate }}</h2>
             <div>
-              <h3>About me</h3>
+              <h3>{{ 'ABOUT.ABOUT' | translate }}</h3>
 
               <p>
-                Hi, I’m Daniel! I’ve been working in web development for over three and a half years, starting with my apprenticeship.
-                I’m passionate about combining the logic of computer science with the creativity of design, building websites and applications
-                that are not only functional but also visually engaging.
+                {{ 'ABOUT.ME' | translate }}
               </p>
 
-              <p class="highlight"><span><img src="assets/img/icons/location_on.svg"></span>I’m based in Munich, but I thrive in flexible environments. Remote work fits me perfectly, and I’m open to relocating for the right opportunity.</p>
-              <p class="highlight"><span><img src="assets/img/icons/new_releases.svg"></span>I approach new technologies, tools, and frameworks with curiosity and enthusiasm. For me, learning isn’t just about keeping up it’s a chance to innovate, bring fresh ideas to my work, and continually push the boundaries of what I can create.</p>
-              <p class="highlight"><span><img src="assets/img/icons/cognition.svg"></span>I tackle challenges with a mix of analytical thinking, creativity, and persistence. I love experimenting to find elegant, efficient solutions that have a meaningful impact. Coding for me is more than getting things done it’s about crafting solutions that last.</p>
+              <p class="highlight"><span><img src="assets/img/icons/location_on.svg"></span>{{ 'ABOUT.LOCATION' | translate }}</p>
+              <p class="highlight"><span><img src="assets/img/icons/new_releases.svg"></span>{{ 'ABOUT.UP_2_DATE' | translate }}</p>
+              <p class="highlight"><span><img src="assets/img/icons/cognition.svg"></span>{{ 'ABOUT.COGNITION' | translate }}</p>
             </div>
           </div>
         </article>
