--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,8 +2,8 @@
   <div class="max-wrapper">
     <div>
       <img [routerLink]="['']" (click)="scrollToTop()" alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="363" width="906" priority>
-      <p>Web Developer</p>
-      <address>Munich Germany</address>
+      <p>{{ 'FOOTER.DEVELOPER' | translate }}</p>
+      <address>{{ 'FOOTER.ADDRESS' | translate }}</address>
     </div>
 
     <p>© Daniel Tran 2025</p>
@@ -13,7 +13,7 @@
         <li><a target="_blank" rel="noopener" href="https://github.com/uteki">Github</a></li>
         <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/daniel-tran-72285930b">LinkedIn</a></li>
         <li><a href="mailto:danietr99@gmail.com">Email</a></li>
-        <li><a [routerLink]="['/legal-notice']" target="_blank">Legal Notice</a></li>
+        <li><a [routerLink]="['/legal-notice']" (click)="scrollToTop()">{{ 'FOOTER.LEGAL_NOTICE' | translate }}</a></li>
       </ul>
     </nav>
   </div>
