--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,3 +86,28 @@ body.terms-privacy app-root {
 .highlight {
   color: white;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1C1C1C;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #00b3ad, #007c77);
+  border-radius: 10px;
+  transition: all 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #00d1ca, #009991);
+  box-shadow: 0 0 8px #00d1ca;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #00b3ad #1C1C1C;
+}
