--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,4 +1,5 @@
 @use "../../../styles/colors" as *;
+@use "../../../styles/mixins" as *;
 
 header {
   width: 100%;
@@ -7,89 +8,114 @@ header {
   justify-content: center;
   background: linear-gradient(0deg, rgba(0, 0, 0, 0) 13.56%, rgba(0, 0, 0, 0.6) 84.01%);
 
-    > div {
-      width: 100%;
-      height: 98px;
-      display: flex;
+  > div {
+    width: 100%;
+    height: 98px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    > nav {
       align-items: center;
-      justify-content: space-between;
+      display: flex;
+      gap: 24px;
 
-      > nav {
-        align-items: center;
-        display: flex;
-        gap: 24px;
-
-        > div {
-          display: flex;
-          flex-wrap: nowrap;
-          border-radius: 100px;
-          border: 2px solid $green-hundred;
-
-          &:hover {
-            transition: all 0.5s ease;
-            border: 2px solid #ffffff;
-
-            > button {
-              transition: all 0.5s ease;
-              color: $green-hundred;
-              font-weight: 700;
-            }
-          }
-
-          > button {
-            margin: 0;
-            width: 44px;
-            height: 28px;
-            font-size: 16px;
-            font-weight: 400;
-            line-height: 120%;
-            padding-left: 12px;
-            padding-right: 12px;
-            color: $green-fifty;
-            border-radius: 100px;
-            background: transparent;
-            font-family: "Fira Code", monospace;
-
-            &:focus-visible {
-              outline: 2px solid $green-hundred;
-            }
-          }
-        }
-
-        a {
-          color: white;
-          font-size: 20px;
-          font-weight: 100;
-          line-height: 100%;
-          position: relative;
-          white-space: nowrap;
-          letter-spacing: -0.03em;
-          font-family: "Fira Code", monospace;
-
-          &:hover {
-            &:after {
-              top: 100%;
-              left: 50%;
-              width: 8px;
-              height: 8px;
-              content: "";
-              border-radius: 50%;
-              position: absolute;
-              background: $primary-green;
-              transform: translate(-50%, 4px);
-            }
-          }
-        }
+      > div {
+        @include lang-button;
       }
 
-      > img {
-        height: auto;
-        width: 132.14px;
-        object-fit: contain;
+      a {
+        color: white;
+        font-size: 20px;
+        font-weight: 100;
+        line-height: 100%;
+        position: relative;
+        white-space: nowrap;
+        letter-spacing: -0.03em;
+        font-family: "Fira Code", monospace;
 
-        &:hover {}
+        &:hover {
+          &:after {
+            top: 100%;
+            left: 50%;
+            width: 8px;
+            height: 8px;
+            content: "";
+            border-radius: 50%;
+            position: absolute;
+            background: $primary-green;
+            transform: translate(-50%, 4px);
+          }
+        }
       }
     }
+
+    > img {
+      height: auto;
+      width: 132.14px;
+      object-fit: contain;
+
+      &:first-child {
+        display: none;
+        max-height: 48px;
+        max-width: max-content;
+      }
+    }
+
+    > button {
+      padding: 0;
+      display: none;
+
+      &:hover {
+        svg path {
+          fill: $green-hundred;
+        }
+      }
+    }
+  }
+}
+
+.menu-box {
+  gap: 10px;
+  top: 80px;
+  opacity: 1;
+  right: 24px;
+  z-index: 20;
+  display: flex;
+  position: fixed;
+  max-width: 238px;
+  max-height: 252px;
+  padding: 40px 77px;
+  border-radius: 30px;
+  flex-direction: column;
+  border: 1px solid #3DCFB6;
+  animation: slideIn 0.3s ease-out;
+  background: linear-gradient(55.22deg, #1C1C1C 36.26%, #08463B 93.28%);
+
+  > nav {
+    gap: 24px;
+    opacity: 1;
+    width: 92px;
+    height: 172px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    > div {
+      @include lang-button;
+    }
+
+    > a {
+      font-family: "Fira Code", monospace;
+      text-decoration: none;
+      letter-spacing: -3%;
+      white-space: nowrap;
+      line-height: 100%;
+      font-weight: 400;
+      font-size: 18px;
+      color: white;
+    }
+  }
 }
 
 .active-lang {
@@ -99,4 +125,48 @@ header {
   background: $green-hundred !important;
   font-weight: 700 !important;
   color: white !important;
+}
+
+.overlay {
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  height: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.32);
+}
+
+@media (max-width: 768px) {
+  header {
+    > div {
+      > nav {
+        gap: 12px;
+      }
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  header {
+    > div {
+      > nav {
+        display: none;
+      }
+
+      > img {
+        &:first-child {
+          display: unset;
+        }
+
+        &:nth-child(3) {
+          display: none;
+        }
+      }
+
+      > button {
+        display: flex;
+      }
+    }
+  }
 }
