--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -29,3 +29,40 @@
     }
   }
 }
+
+@mixin lang-button {
+  display: flex;
+  flex-wrap: nowrap;
+  border-radius: 100px;
+  border: 2px solid $green-hundred;
+
+  &:hover {
+    transition: all 0.5s ease;
+    border: 2px solid #ffffff;
+
+    > button {
+      transition: all 0.5s ease;
+      color: $green-hundred;
+      font-weight: 700;
+    }
+  }
+
+  > button {
+    margin: 0;
+    width: 44px;
+    height: 28px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 120%;
+    padding-left: 12px;
+    padding-right: 12px;
+    color: $green-fifty;
+    border-radius: 100px;
+    background: transparent;
+    font-family: "Fira Code", monospace;
+
+    &:focus-visible {
+      outline: 2px solid $green-hundred;
+    }
+  }
+}
