--- a/src/app/landing-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.scss
@@ -115,13 +115,22 @@ section {
         }
 
         &:nth-child(2) {
+          display: none;
+          margin-bottom: 11px;
+        }
+
+        &:nth-child(3) {
           margin-bottom: 12px;
         }
 
-        &:nth-child(2), &:nth-child(3) {
+        &:nth-child(2), &:nth-child(3), &:nth-child(4) {
           &:hover {
             > svg > * {
               fill: white ;
+            }
+
+            > svg > g > g > path {
+              fill: white;
             }
 
             &::before {
@@ -186,13 +195,13 @@ sections::before {
     backdrop-filter: blur(3px);
 
     > div {
-        width: 99%;
-        left: -15px;
-        height: 100%;
-        max-width: 100%;
-        overflow: hidden;
-        position: relative;
-        margin-inline: auto;
+      width: 99%;
+      left: -15px;
+      height: 100%;
+      max-width: 100%;
+      overflow: hidden;
+      position: relative;
+      margin-inline: auto;
 
       > p {
         margin: 0;
@@ -223,5 +232,67 @@ sections::before {
 @for $i from 1 through $items {
   .item#{$i} {
     animation-delay: calc(#{$duration} / #{$items} * (#{$items} - #{$i}) * -1);
+  }
+}
+
+@media (max-width: 992px) {
+  .lateral {
+    > aside {
+      > div {
+        > a {
+          &:first-child {
+            display: none;
+          }
+
+          &:nth-child(2) {
+            display: inline-flex;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  section {
+    > div {
+      > h1 {
+        font-size: 62px;
+      }
+
+      > h2 {
+        font-size: 24px;
+      }
+
+      > div {
+        gap: 24px;
+      }
+    }
+  }
+
+  .marquee {
+    > div {
+      > div {
+        > p {
+          font-size: 24px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  section {
+    > div {
+      > div {
+        margin-top: 30px;
+        align-items: center;
+        flex-direction: column;
+        > a {
+          width: 152px;
+          font-size: 16px;
+        }
+      }
+    }
   }
 }
