--- a/src/app/landing-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.scss
@@ -285,9 +285,11 @@ sections::before {
   section {
     > div {
       > div {
+        gap: 12px;
         margin-top: 30px;
         align-items: center;
         flex-direction: column;
+
         > a {
           width: 152px;
           font-size: 16px;
