--- a/src/app/landing-page/skill-set/skill-set.component.scss
+++ b/src/app/landing-page/skill-set/skill-set.component.scss
@@ -65,6 +65,12 @@ section {
                   color: $green-hundred;
                 }
               }
+
+              > p {
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 120%;
+              }
             }
 
             > a {
