--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="max-wrapper">
-    <img [routerLink]="['']" alt="Logo" ngSrc="./assets/img/danieslogoCut.webp" height="365" width="283" priority>
+    <img [routerLink]="['']" alt="Logo" ngSrc="./assets/img/danieslogoCut.webp" class="logo-img" height="365" width="283" priority>
 
     <nav>
       <div>
@@ -22,7 +22,7 @@
       </a>
     </nav>
 
-    <img [routerLink]="['']" alt="Logo" ngSrc="./assets/img/danieslogo.webp" height="365" width="902" priority>
+    <img [routerLink]="['']" alt="Logo" ngSrc="./assets/img/danieslogo.webp" class="logo-img" height="365" width="902" priority>
 
     <button (click)="openMenu()">
       <svg width="32" height="22" viewBox="0 0 32 22" fill="none" xmlns="http://www.w3.org/2000/svg">
