--- a/src/app/landing-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.scss
@@ -156,25 +156,6 @@ section {
   }
 }
 
-//TODO - Mouse follower firefly
-sections::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  height: 100%;
-  pointer-events: none;
-  background: radial-gradient(
-      circle 150px at var(--x, 50%) var(--y, 50%),
-      rgba(61, 207, 182, 0.3),
-      transparent 80%
-  );
-  transition: background 0.1s linear;
-  z-index: 1;
-}
-
 .marquee {
   inset: 0 0 0 0;
   position: absolute;
@@ -296,5 +277,25 @@ sections::before {
         }
       }
     }
+  }
+}
+
+@media (min-width: 1025px) {
+  section::before {
+    top: 0;
+    left: 0;
+    width: 100%;
+    content: "";
+    height: 100%;
+    z-index: 100;
+    position: fixed;
+    overflow: hidden;
+    pointer-events: none;
+    transition: background 0.1s linear;
+    background: radial-gradient(
+        circle 150px at var(--x, 50%) var(--y, 50%),
+        rgba(61, 207, 182, 0.3),
+        transparent 80%
+    );
   }
 }
