--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -88,7 +88,7 @@ header {
   padding: 40px 77px;
   border-radius: 30px;
   flex-direction: column;
-  border: 1px solid #3DCFB6;
+  border: 1px solid $green-hundred;
   animation: slideIn 0.3s ease-out;
   background: linear-gradient(55.22deg, #1C1C1C 36.26%, #08463B 93.28%);
 
