Cleanup and JSDoc

--- a/src/app/landing-page/about-me/about-me.component.html
+++ b/src/app/landing-page/about-me/about-me.component.html
@@ -2,7 +2,7 @@
   <div class="max-wrapper">
     <div>
         <figure [class.hovered]="hovered" (mouseenter)="onHover()">
-          <img ngSrc="assets/img/photos/danie.jpg" alt="Daniel Tran" height="1600" width="1600" priority>
+          <img ngSrc="../../../assets/img/photos/danie-profile.jpg" alt="Daniel Tran" height="1600" width="1600" priority>
 
           <figcaption class="d-none">
             Outside of development, I’m a passionate breakdancer. The discipline, creativity, and drive to constantly refine my skills in dance inspire how I approach coding and problem-solving in my projects.
