--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="max-wrapper">
     <div>
-      <img [routerLink]="['']" (click)="scrollToTop()" alt="Logo" ngSrc="./assets/img/danieslogo.webp" class="logo-img" height="363" width="906" priority>
+      <img [routerLink]="['']" (click)="scrollToTop()" alt="Logo" ngSrc="../../../assets/img/logo.webp" class="logo-img" height="363" width="906" priority>
       <p>{{ 'FOOTER.DEVELOPER' | translate }}</p>
       <address>{{ 'FOOTER.ADDRESS' | translate }}</address>
     </div>
