--- a/src/app/landing-page/above-the-fold/above-the-fold.component.html
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.html
@@ -32,8 +32,8 @@
 
     <aside class="right">
       <div>
-        <a href="mailto:danietr99@gmail.com">danietr99&#64;gmail.com</a>
-        <a href="mailto:danietr99@gmail.com">
+        <a href="mailto:webmaster@daniel-tran.com">webmaster&#64;daniel-tran.com</a>
+        <a href="mailto:webmaster@daniel-tran.com">
           <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_3296_4053)">
               <mask id="mask0_3296_4053" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
