--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -12,7 +12,7 @@
       <ul>
         <li><a target="_blank" rel="noopener" href="https://github.com/uteki">Github</a></li>
         <li><a target="_blank" rel="noopener" href="https://www.linkedin.com/in/daniel-tran-72285930b">LinkedIn</a></li>
-        <li><a href="mailto:danietr99@gmail.com">Email</a></li>
+        <li><a href="mailto:webmaster@daniel-tran.com">Email</a></li>
         <li><a [routerLink]="['/legal-notice']" (click)="scrollToTop()">{{ 'FOOTER.LEGAL_NOTICE' | translate }}</a></li>
       </ul>
     </nav>
