--- a/src/app/landing-page/above-the-fold/above-the-fold.component.scss
+++ b/src/app/landing-page/above-the-fold/above-the-fold.component.scss
@@ -108,6 +108,7 @@ section {
 
         &:first-child {
           transform: rotate(90deg) translateX(-60%);
+          white-space: nowrap;
 
           &:hover {
             color: $green-hundred;
