User story update

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -30,8 +30,7 @@ footer {
         height: auto;
         width: 132.14px;
         object-fit: contain;
-
-        &:hover {}
+        cursor: pointer;
       }
 
       > p, address {
